<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>eu.europa.ec.joinup.sd-dss</groupId>
		<artifactId>sd-dss</artifactId>
		<version>5.4.2-SNAPSHOT</version>
	</parent>

	<artifactId>sscd-mocca-adapter</artifactId>

	<licenses>
		<license>
      		<name>EUPL v1.1</name>
      		<url>https://joinup.ec.europa.eu/collection/eupl/eupl-text-11-12</url>
		</license>
	</licenses>
	
	<repositories>
		<repository>
            <id>E-Government Innovationszentrum - EGIZ</id>
            <url>https://apps.egiz.gv.at/maven/</url>
        </repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>at.gv.egiz</groupId>
			<artifactId>smcc</artifactId>
			<version>1.3.30</version>
		</dependency>
		<dependency>
			<groupId>${project.groupId}</groupId>
			<artifactId>dss-spi</artifactId>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>ch.qos.logback</groupId>
			<artifactId>logback-classic</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<profiles>
		<profile>
            <id>jdk19-plus</id>
            <activation>
                <jdk>[9,)</jdk>
            </activation>
            
            <build>
				<plugins>
					<plugin>
						<artifactId>maven-compiler-plugin</artifactId>
						<configuration>
							<source>9</source>
							<target>9</target>
	                        <compilerArgs>
								<arg>--add-modules</arg>
								<arg>java.smartcardio</arg>
							</compilerArgs>
						</configuration>
					</plugin>
					<plugin>
	                    <groupId>org.apache.maven.plugins</groupId>
	                    <artifactId>maven-javadoc-plugin</artifactId>
	                    <configuration>
	                        <additionalJOptions>
	                         <additionalJOption>-html5</additionalJOption>
	                            <additionalJOption>--add-modules</additionalJOption>
	                            <additionalJOption>java.smartcardio</additionalJOption>
	                        </additionalJOptions>
	                    </configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>
